<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_dashboard"
        android:title="@string/bottom_menu_dashboard"
        android:icon="@drawable/bottom_navigation_home_icon_colors"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_history"
        android:title="@string/bottom_menu_history"
        android:icon="@drawable/bottom_navigation_statistic_icon_colors"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_wallet"
        android:title="@string/bottom_menu_token"
        android:icon="@drawable/bottom_navigation_wallet_icon_colors"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_user"
        android:title="@string/bottom_menu_profil"
        android:icon="@drawable/bottom_navigation_profil_icon_colors"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>