<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/splash_background"
    tools:context=".Activites.CodeVerificationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/splash_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_slogan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/splash"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/chewy"
            android:text="@string/slogan"
            android:textColor="@color/splash_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/v_separateur_bas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_logo"
            app:layout_constraintTop_toBottomOf="@+id/v_separateur_haut"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/v_separateur_haut"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@color/splash_separator"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/v_separateur_bas"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/splash_separator"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/chewy"
        android:text="@string/insert_code"
        android:textAlignment="center"
        android:textColor="@color/splash_text"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bad_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:fontFamily="@font/chewy"
            android:text="@string/bad_num"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_change_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:fontFamily="@font/chewy"
            android:text="@string/change_num"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:hint="@string/format_code"
        android:inputType="number"
        app:keep_hint="true"
        app:mask="# - # - # - # - # - #"
        tools:ignore="MissingConstraints"
        android:textSize="25sp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Lokre.Button"
        android:id="@+id/bt_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/bt_valider_code"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:fontFamily="@font/chewy"
            android:text="@string/not_received_code"
            android:textAlignment="center"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/chewy"
            android:text=" 00:00 "
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:fontFamily="@font/chewy"
            android:text="@string/resend_code"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_code"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:indeterminate="true"
        android:minWidth="30dp"
        android:minHeight="30dp"
        android:visibility="gone" />

</LinearLayout>