<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    style="@style/card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/item_card_info">

        <LinearLayout
            android:id="@+id/product_pics"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            android:background="@color/item_card_picture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv_product_pic1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/splash_image_description"
                android:src="@drawable/ic_baseline_image_24"/>

            <ImageView
                android:id="@+id/iv_product_pic2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/splash_image_description"
                android:src="@drawable/ic_baseline_image_24"/>

            <ImageView
                android:id="@+id/iv_product_pic3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/splash_image_description"
                android:background="@drawable/ic_baseline_image_24"
                android:src="@drawable/ic_image_plus"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="@id/product_pics"
            app:layout_constraintTop_toTopOf="@id/bt_product_join"
            app:layout_constraintEnd_toStartOf="@id/bt_product_join">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product_name"
                android:textSize="16sp"
                style="@style/card_auction_details"/>

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/product_price"
                android:textSize="16sp"
                style="@style/card_auction_details"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="@id/product_pics"
            app:layout_constraintBottom_toBottomOf="@id/bt_product_join"
            app:layout_constraintEnd_toStartOf="@id/bt_product_join">

                <TextView
                    android:id="@+id/tv_product_state"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:drawableStartCompat="@drawable/ic_baseline_local_offer_24"
                    android:text="@string/product_state"
                    android:textColor="@color/button_text"
                    style="@style/card_auction_details"/>

                <TextView
                    android:id="@+id/tv_product_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    app:drawableStartCompat="@drawable/ic_baseline_today_24"
                    android:text="@string/product_date"
                    style="@style/card_auction_details"/>

                <TextView
                    android:id="@+id/tv_product_users"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:drawableStartCompat="@drawable/ic_baseline_person_24"
                    android:text="@string/product_joined"
                    style="@style/card_auction_details"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Lokre.Button"
            android:contentDescription="@string/drapeau_description"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/bt_product_join"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/product_pics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:strokeColor="@color/button_text"
            app:strokeWidth="2dp"
            app:cornerRadius="15dp"
            android:elevation="2dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>